Fix overflow on player list and game list

--- a/wwwroot/less/chat.less
+++ b/wwwroot/less/chat.less
@@ -184,3 +184,11 @@ li {
 .login {
 	margin-top: 1em;
 }
+
+#left-sidebar {
+	overflow: auto;
+}
+
+#right-sidebar {
+	overflow: auto;
+}
